Add new task that hopefully doesn't try to require caching